# SURGEON

./: .clang-format  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  arm-linux-gnueabihf.ini  arm-linux-musleabi.ini  compose.yaml  meson.build  meson.options
docker/: debugger-entrypoint.sh  ghidrathon-entrypoint.sh  runner-entrypoint.sh  trace-entrypoint.sh
firmware/cov-test/: cov-test-cov-bbs.yaml  cov-test-cov.yaml  cov-test.c  meson.build  syscalls.c
firmware/fw-example/: README.md  fw-example-cov-bbs.yaml  fw-example-cov.yaml  fw-example-trans-bbs.yaml  fw-example.c  fw-example_syms.yaml  meson.build  syscalls.c
firmware/p2im/: README.md
firmware/p2im/cnc/: cnc  cnc-cov-bbs.yaml  cnc-cov.yaml  cnc-hal-bbs.yaml  cnc-trans-bbs.yaml  cnc_syms.yaml  meson.build
firmware/p2im/console/: console-bbs.yaml  console-cov.yaml  console-hal-bbs.yaml  console_syms.yaml  meson.build
firmware/p2im/drone/: drone-cov-bbs.yaml  drone-cov.yaml  drone-hal-bbs.yaml  drone_syms.yaml  meson.build
firmware/p2im/gateway/: gateway-cov.yaml  gateway-hal-bbs.yaml  gateway-trans-bbs.yaml  gateway_syms.yaml  meson.build
firmware/p2im/heat-press/: heat-press-bbs.yaml  heat-press-cov.yaml  heat-press-hal-bbs.yaml  heat-press_syms.yaml  meson.build
firmware/p2im/plc/: meson.build  plc-cov.yaml  plc-hal-bbs.yaml  plc-trans-bbs.yaml  plc_syms.yaml
firmware/p2im/reflow-oven/: meson.build  reflow-oven-cov-bbs.yaml  reflow-oven-cov.yaml  reflow-oven-hal-bbs.yaml  reflow-oven_syms.yaml
firmware/p2im/robot/: meson.build  robot-cov-bbs.yaml  robot-cov.yaml  robot-hal-bbs.yaml  robot_syms.yaml
firmware/p2im/soldering-iron/: meson.build  soldering-iron-cov-bbs.yaml  soldering-iron-cov.yaml  soldering-iron-hal-bbs.yaml  soldering-iron_syms.yaml
firmware/p2im/steering-control/: meson.build  steering-control-cov-bbs.yaml  steering-control-cov.yaml  steering-control-hal-bbs.yaml  steering-control_syms.yaml
firmware/uart-terminal/: README.md  STM_UART_readme-license.txt  meson.build  uart-terminal-cov-bbs.yaml  uart-terminal-cov.yaml  uart-terminal_syms.yaml
src/: meson.build
src/autogen/: README.md  __main__.py  autogen.py  requirements.txt
src/ghidra_scripts/: README.md  colorize_coverage.py
src/ghidrathon/: basic_blocks.py  hal.py
src/halid/: __main__.py  halid.py
src/halucinator/: __init__.py  __main__.py  constants.py
src/halucinator/bp_handlers/: __init__.py
src/halucinator/bp_handlers/arduino/: arduino_gpio.py  arduino_serial.py
src/halucinator/bp_handlers/example/: README.md  __init__.py  code.py
src/halucinator/bp_handlers/generic/: __init__.py  common.py  io.py
src/halucinator/bp_handlers/riot/: riot_io.py  riot_nvic.py  riot_threads.py  riot_timer.py  riot_uart.py
src/halucinator/bp_handlers/stm32f4/: stm32f4_base.py  stm32f4_gpio.py  stm32f4_i2c.py  stm32f4_nvic.py  stm32f4_tim.py  (+1 more)
src/halucinator/peripheral_models/: __init__.py  gpio.py  serial.py  timer.py
src/qemucov/: __main__.py
src/rewriter/: __init__.py  __main__.py  baseinstrumentor.py  constants.py  covinstrumentor.py  efbasicblock.py  efelf.py  efinstruction.py  eftrampoline.py  halinstrumentor.py  requirements.txt  timerinstrumentor.py  trampolinegenerator.py  transplantationinstrumentor.py
src/runtime/: .gitignore  README.md  context.c  dispatcher.S  emu_handler.c  forkserver.c  interrupts.c  interrupts_asm.S  link.lds  meson.build  offsets.c  runtime.c  timer.c
src/runtime/handlers/: meson.build
src/runtime/handlers/example/: example.c  meson.build
src/runtime/handlers/generic/: common.c  io.c  meson.build
src/runtime/handlers/grbl/: gpio.c  meson.build  timers.c
src/runtime/handlers/riot/: meson.build  nvic.c  threads.c  timers.c  uart.c
src/runtime/handlers/sam/: meson.build  pio.c  timers.c  uart.c
src/runtime/handlers/stm32/: adc.c  base.c  gpio.c  i2c.c  meson.build  nvic.c  timers.c  uart.c
src/runtime/include/surgeon/: context.h  emu_handler.h  forkserver.h  instrumentation.h  interrupts.h  logging.h  runtime.h  symbols.h  timer.h
src/runtime/include/surgeon/models/riot/: uart.h
src/runtime/include/surgeon/models/sam/: pio.h
src/runtime/include/surgeon/models/stm32/: gpio.h  uart.h
src/runtime/models/: meson.build
src/runtime/models/sam/: meson.build  pio.c
src/runtime/models/stm32/: gpio.c  meson.build  uart.c
