
option('firmware', type : 'combo', 
       choices : ['fw-example', 'uart-terminal', 'cov-test', 'p2im/cnc',
                  'p2im/console', 'p2im/drone', 'p2im/gateway', 
                  'p2im/heat-press', 'p2im/plc', 'p2im/reflow-oven', 
                  'p2im/robot', 'p2im/soldering-iron', 'p2im/steering-control'
                 ],
       value : 'p2im/console',
       description : 'Choose which firmware to build.'
)

option('coverage', type : 'boolean', value : true, description : 
       'Choose whether to build with coverage report or not. ' + 
       'Value true for coverage, false without.'
)

